src/objects/OpportunityUniversityCourse__c.object
<CustomObject>
    <description>CORE adopted from UKHE - This stores the link between the Opportunity and University Course</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity University Courses</relationshipLabel>
        <relationshipName>Opportunity_University_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adoption_Criteria__c</fullName>
        <description>The following field allows the user to identify via a free form text field what the current adoption criteria to be considered is for the associated Opportunity</description>
        <label>Adoption Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Type__c</fullName>
        <description>This field populates the Opportunity Adoption Type field with the adoption type found from the University Course</description>
        <label>Adoption Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel of business (i.e. Direct Bill, Bookstore, etc.)</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>HYPERLINK(UniversityCourse__r.Id ,  UniversityCourse__r.Course_Name__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populates based when digital products are added to opportunity</description>
        <label>Technology Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fall__c</fullName>
        <description>This field identifies how many enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Fall</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <label>Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Opportunity Name field to hold name</description>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_University_Course_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>This contains the opportunity.</description>
        <inlineHelpText>This contains the opportunity.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Courses</relationshipLabel>
        <relationshipName>OpportunityUniversityCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_University_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selling_Period__c</fullName>
        <description>This specifies the selling period for the adoption.</description>
        <label>Selling Period</label>
        <picklist>
            <picklistValues>
                <fullName>Spring 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field identifies whether the student or contact qualifies for special pricing renewal based on some offline determined criteria</description>
        <label>Special Pricing Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spring__c</fullName>
        <description>This field identifies how many Spring enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Spring</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>The following field is used by the sales rep to identify the strategy for closing on an opportunity.</description>
        <label>Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summer__c</fullName>
        <description>This field identifies how many Summer enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Summer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TempRefID__c</fullName>
        <description>[HH- Remove before deployment] Temp to support Data Migration from Dev2</description>
        <label>Temp-RefID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rollover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniversityCourse__c</fullName>
        <description>This contains the University course.</description>
        <inlineHelpText>This contains the University course.</inlineHelpText>
        <label>University Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Course Opportunities</relationshipLabel>
        <relationshipName>OpportunityUniversityCourses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Winter__c</fullName>
        <description>This field identifies how many Winter enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Winter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3PL__c</fullName>
        <label>3PL</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Course</label>
    <nameField>
        <displayFormat>OPTYUC-{00000}</displayFormat>
        <label>OpportunityUniversityCourse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>